Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,9 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
+container:
+  image: hashicorp/terraform:1.6.6
 
 steps:
 
@@ -19,6 +21,7 @@ steps:
   name: publickey
   inputs:
     secureFile: 'azure_rsa.pub'
+
 - task: TerraformCLI@2
   inputs:
     command: 'init'
