Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,8 +34,8 @@ steps:
     ensureBackend: true
     backendAzureRmResourceGroupName: 'terraform-backend-rg'
     backendAzureRmResourceGroupLocation: 'westeurope'
-    backendAzureRmStorageAccountName: 'storageaccountvictorzamudioj'
-    backendAzureRmContainerName: 'storageaccountvictorzamudiojcontainer'
+    backendAzureRmStorageAccountName: 'stacctvzamudioj'
+    backendAzureRmContainerName: 'stacctvzamudiojc'
     backendAzureRmKey: 'kubernetes-dev.tfstate'
     allowTelemetryCollection: true
     commandOptions: '-var client_id=$(client_id) -var client_secret=$(client_secret) -var ssh_public_key=$(publickey.secureFilePath)'
