destroy-azure-devops-infrastructure

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,9 +50,9 @@ steps:
       environmentServiceName: "terraform-aks-azurerm-svc-con"
       commandOptions: "-var client_id=$(client_id) -var client_secret=$(client_secret) -var ssh_public_key=$(publickey.secureFilePath)"
   - task: TerraformCLI@0
-    displayName: "apply"
+    displayName: "destroy"
     inputs:
-      command: "apply"
+      command: "destroy"
       workingDirectory: "$(System.DefaultWorkingDirectory)/kubernetes"
       environmentServiceName: "terraform-aks-azurerm-svc-con"
       commandOptions: "-var client_id=$(client_id) -var client_secret=$(client_secret) -var ssh_public_key=$(publickey.secureFilePath)"
